<?xml version="1.0" encoding="utf-8"?>
<com.TeamAwesome.ConnectFour.view.MenuView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.TeamAwesome.ConnectFour.activity.GameMenuActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawablePadding="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="Connect Four"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_with"
            android:textSize="@dimen/option_title_size"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/play_with"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_vertical_margin">

            <RadioButton
                android:id="@+id/play_with_ai"
                style="@style/RadioButtonStyle"
                android:background="@drawable/radio_btn_selector_left_corner"
                android:text="@string/opponent_ai" />

            <RadioButton
                android:id="@+id/play_with_friend"
                style="@style/RadioButtonStyle"
                android:background="@drawable/radio_btn_selector_right_corner"
                android:text="@string/opponent_player" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_color"
            android:textSize="@dimen/option_title_size"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/player1_disc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/disc_red"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/radio_btn_selector_red"
                android:button="@null" />

            <RadioButton
                android:id="@+id/disc_yellow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/radio_btn_selector_yellow"
                android:button="@null" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board_size"
            android:textSize="@dimen/option_title_size"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/board_size"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_vertical_margin">

            <RadioButton
                android:id="@+id/board_one"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_btn_selector_left_corner"
                android:text="@string/_7_x_6" />

            <RadioButton
                android:id="@+id/board_two"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_btn_selector_center"
                android:duplicateParentState="true"
                android:text="@string/_8_x_7" />

            <RadioButton
                android:id="@+id/board_three"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_btn_selector_right_corner"
                android:text="@string/_10_x_8" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_turn"
            android:textSize="@dimen/option_title_size"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/first_turn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_vertical_margin">

            <RadioButton
                android:id="@+id/first_turn_player1"
                style="@style/RadioButtonStyle"
                android:background="@drawable/radio_btn_selector_left_corner"
                android:text="@string/you"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/first_turn_player2"
                style="@style/RadioButtonStyle"
                android:background="@drawable/radio_btn_selector_right_corner"
                android:text="@string/opponent_ai"
                android:textAllCaps="true" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"
                android:textSize="@dimen/option_title_size"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="2"
                android:progress="3" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/level_0"
                    android:textSize="@dimen/seekbar_text_size"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/level_1"
                    android:textSize="@dimen/seekbar_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/level_2"
                    android:textSize="@dimen/seekbar_text_size"
                    tools:ignore="RelativeOverlap,RtlHardcoded" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:text="@string/play"
        android:textColor="@android:color/white"
        android:textSize="@dimen/play_font_size"
        android:textStyle="bold" />
</com.TeamAwesome.ConnectFour.view.MenuView>
